--- a/404.html
+++ b/404.html
@@ -1,17 +1,76 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Filon N.V. for BSTU. Category: site, travel, tour, country, visitor, hotels">
+    <title>Беларусь - TravelCO</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/fonts.css">
+    <link rel="stylesheet" href="css/variables.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/404.css">
-    <title>Page not found</title>
 </head>
+
 <body>
-    <h1>404
-    </h1>
-    <h3>Страница не найдена!</h3>
-    <p>Приносим свои извинения!</p>
+    <div class="content">
+        <header>
+            <div class="marg">
+                <div class="header-menu__mobile">
+                    <div><a href="404.html"><img src="images/page1/header/Burger.webp" alt="Burger"></a></div>
+                    <div><a href="index.html">TRAVELCO</a></div>
+                    <div><a href="404.html"><img src="images/page1/header/Cabinet.webp" alt="Cabinet"></a></div>
+                </div>
+                <div class="header-menu">
+                    <div class="header-menu__left"><a href="index.html">TRAVELCO</a></div>
+                    <div class="header-menu__right">
+                        <ul class="header-menu__right_ul">
+                            <li><a href="travels.html">Поиск</a></li>
+                            <li><a href="country.html">Страны</a></li>
+                            <li><a href="404.html">Туры</a></li>
+                            <li><a href="404.html">Контакты</a></li>
+                            <li><a href="404.html">Личный кабинет</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="header-search">
+                    <form method="get">
+                        <input name="s" placeholder="Искать страны, туры, рейсы и другое" type="search">
+                    </form>
+                </div>
+                <p id="header-text">Минск, Беларусь</p>
+            </div>
+        </header>
+        <main>
+            <h3>404</h3>
+            <p>Страница не найдена!</p>
+        </main>
+        <footer>
+            <div class="marg">
+                <div class="footer-block1">
+                    <div class="footer-block1__left">
+                        <a href="404.html">TRAVELCO</a>
+                        <p>Компания является частной собственностью ИП Филон. Все права защищены.</p>
+                    </div>
+                    <div class="footer-block1__right">
+                        <ul class="">
+                            <li><a href="404.html">О нас</a></li>
+                            <li><a href="404.html">Контакты</a></li>
+                            <li><a href="404.html">Гарантии</a></li>
+                            <li><a href="404.html">Служба поддержки</a></li>
+                            <li><a href="404.html">Пресса о нас</a></li>
+                            <li><a href="404.html">Блиц-опрос</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-block2">
+                    <p>+375 29 12 34 567</p>
+                    <p>BY75 722K ZT40 7708 1210</p>
+                </div>
+            </div>
+        </footer>
+    </div>
 </body>
+
 </html>
