--- a/country.html
+++ b/country.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/styleCountry.css">
 </head>
+
 <body>
     <div class="content">
         <header>
@@ -24,8 +26,8 @@
                     <div class="header-menu__left"><a href="index.html">TRAVELCO</a></div>
                     <div class="header-menu__right">
                         <ul class="header-menu__right_ul">
-                            <li><a href="country.html">Поиск</a></li>
-                            <li><a href="travels.html">Страны</a></li>
+                            <li><a href="travels.html">Поиск</a></li>
+                            <li><a href="country.html">Страны</a></li>
                             <li><a href="404.html">Туры</a></li>
                             <li><a href="404.html">Контакты</a></li>
                             <li><a href="404.html">Личный кабинет</a></li>
@@ -47,165 +49,174 @@
                         <img src="images/page2/main-block1/by.webp" alt="by">
                         <h2>Беларусь</h2>
                     </div>
-                <div class="main-block1__elem1">
-                    <img src="images/page2/main-block1/Map.webp" alt="minsk-foto">
-                    <div class="main-block1__elem1_info" id="page2b1">
-                        <h1>О стране</h1>
-                        <p>Республика Беларусь расположена в центре Европы, входит в состав региона Восточная Европа. Через страну проходят важнейшие транзитные потоки всего континента, в том числе один из магистральных транспортных коридоров Евразии с юго-запада на северо-восток. Также по территории страны проходят кратчайшие транспортные пути, связывающие два моря – Балтийское и Черное.</p>
+                    <div class="main-block1__elem1">
+                        <img src="images/page2/main-block1/Map.webp" alt="minsk-foto">
+                        <div class="main-block1__elem1_info" id="page2b1">
+                            <h1>О стране</h1>
+                            <p>Республика Беларусь расположена в центре Европы, входит в состав региона Восточная
+                                Европа. Через страну проходят важнейшие транзитные потоки всего континента, в том числе
+                                один из магистральных транспортных коридоров Евразии с юго-запада на северо-восток.
+                                Также по территории страны проходят кратчайшие транспортные пути, связывающие два моря –
+                                Балтийское и Черное.</p>
+                        </div>
                     </div>
-                </div>
                 </div>
             </div>
             <div class="main-block2">
                 <div class="marg">
-                <div class="main-block2__elem1">
-                    <h2>Актуальные предложения</h2>
-                    <a href="404.html">больше</a>
-                </div>
-                <div class="main-block2__elem2">
-                    <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block2/main-block2_1.webp" alt="Lida castle">
-                        <div>
-                            <h3>Лидский замок, Лида</h3>
-                            <p>от 125 BYN</p>
-                        </div>
-                    </a>
-                    <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block2/main-block2_2.webp" alt="Mir Castle">
-                        <div>
-                            <h3>Мирский замок, Мир</h3>
-                            <p>от 210 BYN</p>
-                        </div>
-                    </a>
-                    <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block2/main-block2_3.webp" alt="Nesviz castle">
-                        <div>
-                            <h3>Несвижский замок, Несвиж</h3>
-                            <p>от 60 BYN</p>
-                        </div>
-                    </a>
-                    <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block2/main-block2_4.webp" alt="Hrodno castle">
-                        <div>
-                            <h3>Гродненский замок, Гродно</h3>
-                            <p>от 150 BYN</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="main-block2__elem2__mobile">
-                    <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page1/main-block2/main-block2_1.webp" alt="lida-castle">
-                        <div>
-                            <h3>Лидский замок, Лида</h3>
-                            <p>от 125 BYN</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="mobile_switches">
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.webp" alt="arrowLeft"></button>
-                    <div class="main-block1__switches__radio">
-                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball1"></div>
-                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball2"></div>
-                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
-                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
+                    <div class="main-block2__elem1">
+                        <h2>Актуальные предложения</h2>
+                        <a href="404.html">больше</a>
                     </div>
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.webp" alt="arrowRight"></button>
-                </div>
+                    <div class="main-block2__elem2">
+                        <a href="404.html" class="main-block2__elem2__elem">
+                            <img src="images/page2/main-block2/main-block2_1.webp" alt="Lida castle">
+                            <div>
+                                <h3>Лидский замок, Лида</h3>
+                                <p>от 125 BYN</p>
+                            </div>
+                        </a>
+                        <a href="404.html" class="main-block2__elem2__elem">
+                            <img src="images/page2/main-block2/main-block2_2.webp" alt="Mir Castle">
+                            <div>
+                                <h3>Мирский замок, Мир</h3>
+                                <p>от 210 BYN</p>
+                            </div>
+                        </a>
+                        <a href="404.html" class="main-block2__elem2__elem">
+                            <img src="images/page2/main-block2/main-block2_3.webp" alt="Nesviz castle">
+                            <div>
+                                <h3>Несвижский замок, Несвиж</h3>
+                                <p>от 60 BYN</p>
+                            </div>
+                        </a>
+                        <a href="404.html" class="main-block2__elem2__elem">
+                            <img src="images/page2/main-block2/main-block2_4.webp" alt="Hrodno castle">
+                            <div>
+                                <h3>Гродненский замок, Гродно</h3>
+                                <p>от 150 BYN</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="main-block2__elem2__mobile">
+                        <a href="404.html" class="main-block2__elem2__elem">
+                            <img src="images/page1/main-block2/main-block2_1.webp" alt="lida-castle">
+                            <div>
+                                <h3>Лидский замок, Лида</h3>
+                                <p>от 125 BYN</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="mobile_switches">
+                        <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.webp"
+                                alt="arrowLeft"></button>
+                        <div class="main-block1__switches__radio">
+                            <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball1"></div>
+                            <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball2"></div>
+                            <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
+                            <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
+                        </div>
+                        <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.webp"
+                                alt="arrowRight"></button>
+                    </div>
                 </div>
             </div>
             <div class="main-block2" id="country">
                 <div class="marg">
-                <div class="main-block2__elem1">
-                    <h2>Отели</h2>
-                    <a href="404.html">больше</a>
-                </div>
-                <div class="main-block2__elem2">
-                    <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block3/main-block3_1.webp" alt="Minsk-Hostel">
-                        <div>
-                            <h3>Гостиница "Минск" 4*</h3>
-                            <p>от 550 BYN за ночь</p>
-                        </div>
-                    </a>
-                    <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block3/main-block3_2.webp" alt="Victoria Olimp">
-                        <div>
-                            <h3>"Виктория Олимп" 4*</h3>
-                            <p>от 250 BYN за ночь</p>
-                        </div>
-                    </a>
-                    <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block3/main-block3_3.webp" alt="President-hotel">
-                        <div>
-                            <h3>Президент-отель 5*</h3>
-                            <p>от 600 BYN за сутки</p>
-                        </div>
-                    </a>
-                    <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block3/main-block3_4.webp" alt="Sarai Heaven">
-                        <div>
-                            <h3>Сарай "Райская жизнь" 3*</h3>
-                            <p>от 150 BYN за ночь</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="main-block2__elem2__mobile">
-                    <a href="404.html" class="main-block2__elem2__elem">
-                        <img src="images/page2/main-block3/main-block3_1.webp" alt="Minsk-hostel">
-                        <div>
-                            <h3>Гостиница "Минск" 4*</h3>
-                            <p>от 125 BYN за ночь</p>
-                        </div>
-                    </a>
-                </div>
-                <div class="mobile_switches">
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.webp" alt="arrowLeft"></button>
-                    <div class="main-block1__switches__radio">
-                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball1"></div>
-                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball2"></div>
-                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
-                        <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
+                    <div class="main-block2__elem1">
+                        <h2>Отели</h2>
+                        <a href="404.html">больше</a>
                     </div>
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.webp" alt="arrowRight"></button>
-                </div>
+                    <div class="main-block2__elem2">
+                        <a href="404.html" class="main-block2__elem2__elem">
+                            <img src="images/page2/main-block3/main-block3_1.webp" alt="Minsk-Hostel">
+                            <div>
+                                <h3>Гостиница "Минск" 4*</h3>
+                                <p>от 550 BYN за ночь</p>
+                            </div>
+                        </a>
+                        <a href="404.html" class="main-block2__elem2__elem">
+                            <img src="images/page2/main-block3/main-block3_2.webp" alt="Victoria Olimp">
+                            <div>
+                                <h3>"Виктория Олимп" 4*</h3>
+                                <p>от 250 BYN за ночь</p>
+                            </div>
+                        </a>
+                        <a href="404.html" class="main-block2__elem2__elem">
+                            <img src="images/page2/main-block3/main-block3_3.webp" alt="President-hotel">
+                            <div>
+                                <h3>Президент-отель 5*</h3>
+                                <p>от 600 BYN за сутки</p>
+                            </div>
+                        </a>
+                        <a href="404.html" class="main-block2__elem2__elem">
+                            <img src="images/page2/main-block3/main-block3_4.webp" alt="Sarai Heaven">
+                            <div>
+                                <h3>Сарай "Райская жизнь" 3*</h3>
+                                <p>от 150 BYN за ночь</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="main-block2__elem2__mobile">
+                        <a href="404.html" class="main-block2__elem2__elem">
+                            <img src="images/page2/main-block3/main-block3_1.webp" alt="Minsk-hostel">
+                            <div>
+                                <h3>Гостиница "Минск" 4*</h3>
+                                <p>от 125 BYN за ночь</p>
+                            </div>
+                        </a>
+                    </div>
+                    <div class="mobile_switches">
+                        <button type="button"><img src="images/page1/main-block1/ArrowMobileLeft.webp"
+                                alt="arrowLeft"></button>
+                        <div class="main-block1__switches__radio">
+                            <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball1"></div>
+                            <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball2"></div>
+                            <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
+                            <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
+                        </div>
+                        <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.webp"
+                                alt="arrowRight"></button>
+                    </div>
                 </div>
             </div>
             <div class="main-block4" id="page2">
                 <div class="marg">
-                <h2>Сотрудничество</h2>
-                <div class="main-block4__group">
-                    <img src="images/page2/main-block4/main-block4_1.webp" alt="Rosting">
-                    <img src="images/page2/main-block4/main-block4_2.webp" alt="Sakub">
-                    <img src="images/page2/main-block4/main-block4_3.webp" alt="TezTour">
-                    <img src="images/page2/main-block4/main-block4_4.webp" alt="CoralTravel">
-                </div>
+                    <h2>Сотрудничество</h2>
+                    <div class="main-block4__group">
+                        <img src="images/page2/main-block4/main-block4_1.webp" alt="Rosting">
+                        <img src="images/page2/main-block4/main-block4_2.webp" alt="Sakub">
+                        <img src="images/page2/main-block4/main-block4_3.webp" alt="TezTour">
+                        <img src="images/page2/main-block4/main-block4_4.webp" alt="CoralTravel">
+                    </div>
                 </div>
             </div>
         </main>
         <footer>
             <div class="marg">
-            <div class="footer-block1">
-                <div class="footer-block1__left">
-                    <a href="404.html">TRAVELCO</a>
-                    <p>Компания является частной собственностью ИП Филон. Все права защищены.</p>
+                <div class="footer-block1">
+                    <div class="footer-block1__left">
+                        <a href="404.html">TRAVELCO</a>
+                        <p>Компания является частной собственностью ИП Филон. Все права защищены.</p>
+                    </div>
+                    <div class="footer-block1__right">
+                        <ul class="">
+                            <li><a href="404.html">О нас</a></li>
+                            <li><a href="404.html">Контакты</a></li>
+                            <li><a href="404.html">Гарантии</a></li>
+                            <li><a href="404.html">Служба поддержки</a></li>
+                            <li><a href="404.html">Пресса о нас</a></li>
+                            <li><a href="404.html">Блиц-опрос</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="footer-block1__right">
-                    <ul class="">
-                        <li><a href="404.html">О нас</a></li>
-                        <li><a href="404.html">Контакты</a></li>
-                        <li><a href="404.html">Гарантии</a></li>
-                        <li><a href="404.html">Служба поддержки</a></li>
-                        <li><a href="404.html">Пресса о нас</a></li>
-                        <li><a href="404.html">Блиц-опрос</a></li>
-                    </ul>
+                <div class="footer-block2">
+                    <p>+375 29 12 34 567</p>
+                    <p>BY75 722K ZT40 7708 1210</p>
                 </div>
-            </div>
-            <div class="footer-block2">
-                <p>+375 29 12 34 567</p>
-                <p>BY75 722K ZT40 7708 1210</p>
-            </div>
             </div>
         </footer>
     </div>
 </body>
+
 </html>
