--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <div class="content">
         <header id="header">
@@ -23,8 +25,8 @@
                     <div class="header-menu__left"><a href="index.html">TRAVELCO</a></div>
                     <div class="header-menu__right">
                         <ul class="header-menu__right_ul">
-                            <li><a href="country.html">Поиск</a></li>
-                            <li><a href="travels.html">Страны</a></li>
+                            <li><a href="travels.html">Поиск</a></li>
+                            <li><a href="country.html">Страны</a></li>
                             <li><a href="404.html">Туры</a></li>
                             <li><a href="404.html">Контакты</a></li>
                             <li><a href="404.html">Личный кабинет</a></li>
@@ -42,34 +44,41 @@
         <main>
             <section class="main-block1">
                 <div class="marg">
-                <h2>Самое время для путешествий!</h2>
-                <div class="main-block1__wrapper img_pop">
-                    <div class="main-block1__elem1 page1m">
-                        <img src="images/page1/main-block1/main-block1.webp" alt="minsk-foto">
-                        <div class="main-block1__elem1_info" id="page1b1">
-                            <h1>Минск, Беларусь</h1>
-                            <p>Столица и крупнейший город Беларуси, административный центр Минской области и Минского района, в состав которых не входит, поскольку является самостоятельной административно-территориальной единицей с особым статусом. Крупнейший транспортный узел, политический, экономический, культурный и научный центр страны. Является ядром Минской агломерации. Десятый по численности населения город в Европе, пятый - после Москвы, Санкт-Петербурга, Ташкента, Киева, на территории бывшего СССР.</p>
+                    <h2>Самое время для путешествий!</h2>
+                    <div class="main-block1__wrapper img_pop">
+                        <div class="main-block1__elem1 page1m">
+                            <img src="images/page1/main-block1/main-block1.webp" alt="minsk-foto">
+                            <div class="main-block1__elem1_info" id="page1b1">
+                                <h1>Минск, Беларусь</h1>
+                                <p>Столица и крупнейший город Беларуси, административный центр Минской области и
+                                    Минского района, в состав которых не входит, поскольку является самостоятельной
+                                    административно-территориальной единицей с особым статусом. Крупнейший транспортный
+                                    узел, политический, экономический, культурный и научный центр страны. Является ядром
+                                    Минской агломерации. Десятый по численности населения город в Европе, пятый - после
+                                    Москвы, Санкт-Петербурга, Ташкента, Киева, на территории бывшего СССР.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="mobile_switches">
-                    <button type="button" class="swiper-button-next"><img src="images/page1/main-block1/ArrowMobileLeft.webp" alt="arrow"></button>
-                    <div class="main-block1__switches__radio">
-                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                    <div class="mobile_switches">
+                        <button type="button" class="swiper-button-next"><img
+                                src="images/page1/main-block1/ArrowMobileLeft.webp" alt="arrow"></button>
+                        <div class="main-block1__switches__radio">
+                            <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                            <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                            <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                        </div>
+                        <button type="button" class="swiper-button-prev"><img
+                                src="images/page1/main-block1/ArrowMobileRight.webp" alt="arrow"></button>
                     </div>
-                    <button type="button" class="swiper-button-prev"><img src="images/page1/main-block1/ArrowMobileRight.webp" alt="arrow"></button>
-                </div>
-                <div class="main-block1__switches">
-                    <button type="button"><img src="images/page1/main-block1/Arrow2.webp" alt="arrow"></button>
-                    <div class="main-block1__switches__radio">
-                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
-                        <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                    <div class="main-block1__switches">
+                        <button type="button"><img src="images/page1/main-block1/Arrow2.webp" alt="arrow"></button>
+                        <div class="main-block1__switches__radio">
+                            <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                            <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                            <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
+                        </div>
+                        <button type="button"><img src="images/page1/main-block1/Arrow1.webp" alt="arrow"></button>
                     </div>
-                    <button type="button"><img src="images/page1/main-block1/Arrow1.webp" alt="arrow"></button>
-                </div>
                 </div>
             </section>
             <section class="main-block2">
@@ -126,7 +135,8 @@
                         <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
                     </div>
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.webp" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.webp"
+                            alt="arrow"></button>
                 </div>
             </section>
             <section class="main-block3_">
@@ -162,7 +172,7 @@
                     <a href="404.html">
                         <img src="images/page1/main-block3/main-block3_8.webp" alt="cruise">
                         <h3>Круиз</h3>
-                    </a>    
+                    </a>
                     <a href="404.html">
                         <img src="images/page1/main-block3/main-block3_9.webp" alt="childrens">
                         <h3>Отдых с детьми</h3>
@@ -188,32 +198,40 @@
                         <div><img src="images/page1/main-block1/Eclipse.webp" alt=""></div>
                         <div><img src="images/page1/main-block1/Eclipse.webp" alt="ball3"></div>
                     </div>
-                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.webp" alt="arrow"></button>
+                    <button type="button"><img src="images/page1/main-block1/ArrowMobileRight.webp"
+                            alt="arrow"></button>
                 </div>
             </section>
             <section class="main-block4" id="page1">
                 <div class="marg">
-                <h2>TRAVELCO - туроператор №1 в Беларуси</h2>
-                <p>Международный туристический оператор, организующий туры для путешественников из России, стран СНГ. Работает с 1994 года. Портфель компании насчитывает более 25 стран, сегодня в ее ассортименте такие направления, как: Австрия, Андорра, Беларусь, Болгария, Венгрия, Греция, Грузия, Доминикана, Египет, Израиль, Индонезия, Испания, Италия, Китай, Кипр, Куба, Маврикий, Мальдивы, Мексика, ОАЭ, Португалия, Россия, Сейшелы, Таиланд, Турция, Франция, Чехия, Шри-Ланка.<br>Сотрудничество TRAVELCO с более чем 20 международными и национальными компаниями, работающими на отправку и прием туристов, позволяет туроператору качественно предоставлять услуги туристам из России, Болгарии, Беларуси и Казахстана.
-                </p>
-                <div class="main-block4__group">
-                    <div>
-                        <img src="images/page1/main-block4/main-block4_ico1.webp" alt="#">
-                        <h3>Всегда в тренде</h3>
+                    <h2>TRAVELCO - туроператор №1 в Беларуси</h2>
+                    <p>Международный туристический оператор, организующий туры для путешественников из России, стран
+                        СНГ. Работает с 1994 года. Портфель компании насчитывает более 25 стран, сегодня в ее
+                        ассортименте такие направления, как: Австрия, Андорра, Беларусь, Болгария, Венгрия, Греция,
+                        Грузия, Доминикана, Египет, Израиль, Индонезия, Испания, Италия, Китай, Кипр, Куба, Маврикий,
+                        Мальдивы, Мексика, ОАЭ, Португалия, Россия, Сейшелы, Таиланд, Турция, Франция, Чехия,
+                        Шри-Ланка.<br>Сотрудничество TRAVELCO с более чем 20 международными и национальными компаниями,
+                        работающими на отправку и прием туристов, позволяет туроператору качественно предоставлять
+                        услуги туристам из России, Болгарии, Беларуси и Казахстана.
+                    </p>
+                    <div class="main-block4__group">
+                        <div>
+                            <img src="images/page1/main-block4/main-block4_ico1.webp" alt="#">
+                            <h3>Всегда в тренде</h3>
+                        </div>
+                        <div>
+                            <img src="images/page1/main-block4/main-block4_ico2.webp" alt="#">
+                            <h3>Гарантия качества</h3>
+                        </div>
+                        <div>
+                            <img src="images/page1/main-block4/main-block4_ico3.webp" alt="#">
+                            <h3>Лучшие цены</h3>
+                        </div>
+                        <div>
+                            <img src="images/page1/main-block4/main-block4_ico4.webp" alt="#">
+                            <h3>Безопасность</h3>
+                        </div>
                     </div>
-                    <div>
-                        <img src="images/page1/main-block4/main-block4_ico2.webp" alt="#">
-                        <h3>Гарантия качества</h3>
-                    </div>
-                    <div>
-                        <img src="images/page1/main-block4/main-block4_ico3.webp" alt="#">
-                        <h3>Лучшие цены</h3>
-                    </div>
-                    <div>
-                        <img src="images/page1/main-block4/main-block4_ico4.webp" alt="#">
-                        <h3>Безопасность</h3>
-                    </div>
-                </div>
                 </div>
             </section>
         </main>
@@ -249,4 +267,5 @@
     <script src="js/paralax.js"></script>
     <script src="js/img.js"></script>
 </body>
+
 </html>
